feat(app): Create app with navigation between 3 views

--- a/client/index.html
+++ b/client/index.html
@@ -18,9 +18,14 @@
     <!--[if lt IE 7]>
             <p class="chromeframe">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> or <a href="http://www.google.com/chromeframe/?redirect=true">activate Google Chrome Frame</a> to improve your experience.</p>
     <![endif]-->
-    <ui-view ></ui-view>
+    <ion-nav-bar>
+        <ion-nav-back-button class="button-clear">
+            <i class="ion-arrow-left-c"></i>
+        </ion-nav-back-button>
+    </ion-nav-bar>
+    <ion-nav-view></ion-nav-view>
     <!-- <script src="cordova.js"></script> -->
-    
+
     <script src="scripts/bundle.js"></script>
 </body>
 
